Finished up some of the sorting earlier, commit is late so I don't forget

--- a/templates/product/_productinfo_partial.html.twig
+++ b/templates/product/_productinfo_partial.html.twig
@@ -8,22 +8,30 @@ Should contain body text about the product
 	class="text-left mx-4">
 	{# Display name, category and price of product #}
 	<strong>
-		{{ product.artiklar_benamning is defined ? product.artiklar_benamning : "Name not found"}}
+		{{ product.artiklar_benamning is defined ? product.artiklar_benamning : "Namn kunde inte hittas"}}
 	</strong>
 	<p class="text-gray-400 text-sm">
-		{{ product.artikelkategorier_id is defined ? product.artikelkategorier_id : "Category not found"}}
+		{{ product.artikelkategorier_id is defined ? product.artikelkategorier_id : ""}}
+	</p>
+	<p>
+		{{product.lagersaldo > 0 ? "Finns i lager" : "Finns tyvärr inte i lager" }}
 	</p>
 
-	<p class="pt-16">
-		{{ product.pris is defined ? product.pris : "Pris not found"}}
-		{{ product.valutor_id is defined ? product.valutor_id : "valuta not found"}}
+	<p class="pt-16 text-xl">
+		{{ product.pris is defined ? product.pris * (1 + (product.momssats / 100)) : "Pris not found"}}
+		{{ product.valutor_id is defined ? product.valutor_id : "SEK"}}
 	</p>
+	<p class="text-gray-400 text-sm">
 
-	{# Link to product page #}
-	<a href="/" class=" block w-full mx-auto pt-3">
-		<p class="bg-blue-500 hover:bg-blue-600 text-center py-3 rounded-lg shadow-md text-white">
-			Till produkt
-		</p>
-	</a>
+		{{product.pris}}
+		exkls moms
 
-</div>
+	</p>
+</p>
+
+{# Link to product page #}
+<a href="/" class=" block w-full mx-auto pt-3">
+	<p class="bg-blue-500 hover:bg-blue-600 text-center py-3 rounded-lg shadow-md text-white">
+		Till produkt
+	</p>
+</a></div>
